--- a/mage-epl-stats/mage-quickstart/your_first_project/pipelines/gcs_to_bigquery/metadata.yaml
+++ b/mage-epl-stats/mage-quickstart/your_first_project/pipelines/gcs_to_bigquery/metadata.yaml
@@ -27,13 +27,13 @@ blocks:
   language: python
   name: clean_player_data
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: transformer
   upstream_blocks:
   - load_gcp_player_data
   uuid: clean_player_data
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration: {}
   downstream_blocks: []
@@ -49,7 +49,7 @@ blocks:
   upstream_blocks:
   - clean_player_data
   uuid: clean_data_to_gcs
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration: {}
   downstream_blocks: []
